fix: Add padding-top to plot container for spacing

--- a/web/style/datavzrd.css
+++ b/web/style/datavzrd.css
@@ -150,7 +150,8 @@ th .th-inner {
 }
 
 #vis-container {
-    height: calc(100vh - 105px)
+    height: calc(100vh - 105px);
+    padding-top: 60px;
 }
 
 .fa {
